--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -23,13 +23,13 @@
   /* Primary colors variations */
   --primary-one: #800000;
   --primary-two: #a93232;
-  --primary-fade:  #80000020;
+  --primary-fade: #80000020;
   --primary-text: #800000;
   --primary-text-lighter: #710303;
   --primary-hover: #e3d9d9;
   --primary-warning: #bb1f1f;
 
-  --primary-one-fade: #a627274e;
+  --primary-one-fade: #aa4f4f4e;
   --primary-text-two: #f5cbcb;
   --primary-text-reverse: #f08383;
 
@@ -60,6 +60,7 @@
 
   --green-primary: #004507;
   --green-fade: #3cc16b52;
+  --green-fade-lighter: #87c3955a;
   --green-text: #c8f1cc;
 
   --pink-primary: #810040;
@@ -144,6 +145,7 @@
 
   --green-primary: #97d39d;
   --green-fade: #02732a49;
+  --green-fade-lighter: #02732a4a;
   --green-text: #003d06;
 
   --pink-primary: #ff89ad;
