--- a/frontend/src/app/shared/dialog-scheduling/dialog-scheduling.component.html
+++ b/frontend/src/app/shared/dialog-scheduling/dialog-scheduling.component.html
@@ -141,6 +141,8 @@
             @if (scheduleForm.get('endTime')?.errors?.['requiredWithOther'] &&
             scheduleForm.get('endTime')?.touched) {
             <mat-error>End time is required</mat-error>
+            } @else if (scheduleForm.get('endTime')?.errors?.['sameTime']) {
+            <mat-error>Cannot be same as start time</mat-error>
             }
           </mat-form-field>
         </div>
