--- a/frontend/src/app/core/components/admin/manage-preferences/manage-preferences.component.html
+++ b/frontend/src/app/core/components/admin/manage-preferences/manage-preferences.component.html
@@ -86,7 +86,7 @@
           <th mat-header-cell *matHeaderCellDef class="custom-header">
             Action
           </th>
-          <td mat-cell *matCellDef="let element" class="custom-cell">
+          <td mat-cell *matCellDef="let element" class="custom-cell action">
             <!-- View Preferences Button -->
             <span
               [matTooltip]="
