--- a/frontend/src/app/core/components/admin/reports/report-faculty/report-faculty.component.html
+++ b/frontend/src/app/core/components/admin/reports/report-faculty/report-faculty.component.html
@@ -42,7 +42,11 @@
           <th mat-header-cell *matHeaderCellDef class="custom-header">
             Faculty Name
           </th>
-          <td mat-cell *matCellDef="let element" class="custom-cell">
+          <td
+            mat-cell
+            *matCellDef="let element"
+            class="custom-cell faculty-name"
+          >
             {{ element.facultyName }}
           </td>
         </ng-container>
@@ -88,7 +92,7 @@
           <th mat-header-cell *matHeaderCellDef class="custom-header">
             Action
           </th>
-          <td mat-cell *matCellDef="let element" class="custom-cell">
+          <td mat-cell *matCellDef="let element" class="custom-cell action">
             <span
               [matTooltip]="
                 !hasSchedules(element)
