--- a/frontend/src/app/core/components/admin/reports/report-programs/report-programs.component.html
+++ b/frontend/src/app/core/components/admin/reports/report-programs/report-programs.component.html
@@ -50,7 +50,11 @@
           <th mat-header-cell *matHeaderCellDef class="custom-header">
             Program Name
           </th>
-          <td mat-cell *matCellDef="let element" class="custom-cell">
+          <td
+            mat-cell
+            *matCellDef="let element"
+            class="custom-cell program-name"
+          >
             {{ element.program_title }}
           </td>
         </ng-container>
@@ -102,7 +106,7 @@
           <th mat-header-cell *matHeaderCellDef class="custom-header">
             Action
           </th>
-          <td mat-cell *matCellDef="let element" class="custom-cell">
+          <td mat-cell *matCellDef="let element" class="custom-cell action">
             <span
               [matTooltip]="
                 !hasSchedules(element)
