revert to center alignment

--- a/frontend/src/app/core/components/admin/manage-preferences/manage-preferences.component.scss
+++ b/frontend/src/app/core/components/admin/manage-preferences/manage-preferences.component.scss
@@ -112,7 +112,7 @@
       text-align: center;
 
       &.action {
-        text-align: left;
+        text-align: center;
       }
 
       .request-badge {
