enhance table cell styling and layout adjustments by adding a max-width value

--- a/frontend/src/app/core/components/admin/reports/report-faculty/report-faculty.component.html
+++ b/frontend/src/app/core/components/admin/reports/report-faculty/report-faculty.component.html
@@ -45,7 +45,7 @@
           <td
             mat-cell
             *matCellDef="let element"
-            class="custom-cell faculty-name"
+            class="custom-cell max-cell"
           >
             {{ element.facultyName }}
           </td>
