--- a/frontend/src/app/core/components/admin/academic-year/academic-year.component.html
+++ b/frontend/src/app/core/components/admin/academic-year/academic-year.component.html
@@ -46,7 +46,7 @@
           <th mat-header-cell *matHeaderCellDef class="custom-header">
             Program Title
           </th>
-          <td mat-cell *matCellDef="let element" class="custom-cell">
+          <td mat-cell *matCellDef="let element" class="custom-cell max-cell">
             {{ element.program_title }}
           </td>
         </ng-container>
