--- a/frontend/src/app/core/components/admin/manage-preferences/manage-preferences.component.html
+++ b/frontend/src/app/core/components/admin/manage-preferences/manage-preferences.component.html
@@ -51,7 +51,7 @@
           <th mat-header-cell *matHeaderCellDef class="custom-header">
             Faculty Name
           </th>
-          <td mat-cell *matCellDef="let element" class="custom-cell">
+          <td mat-cell *matCellDef="let element" class="custom-cell max-cell">
             {{ element.facultyName }}
           </td>
         </ng-container>
