--- a/frontend/src/app/core/components/admin/reports/report-programs/report-programs.component.html
+++ b/frontend/src/app/core/components/admin/reports/report-programs/report-programs.component.html
@@ -53,7 +53,7 @@
           <td
             mat-cell
             *matCellDef="let element"
-            class="custom-cell program-name"
+            class="custom-cell max-cell"
           >
             {{ element.program_title }}
           </td>
