--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
@@ -83,7 +83,7 @@
           <th mat-header-cell *matHeaderCellDef class="custom-header">
             Course Title
           </th>
-          <td mat-cell *matCellDef="let element" class="custom-cell">
+          <td mat-cell *matCellDef="let element" class="custom-cell max-cell">
             {{ element.course_title }}
           </td>
         </ng-container>
