--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -242,6 +242,10 @@ span[mat-symbol] {
   padding: var(--spacing-xs);
   text-align: center;
 
+  &.max-cell {
+    max-width: 20rem;
+  }
+
   .faculty-type {
     width: fit-content;
     padding: var(--spacing-xxs) var(--spacing-sm);
