update Angular dependencies to version 19.1.x, and styling/animation fix to adjust in this new version

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -456,3 +456,8 @@ span[mat-symbol] {
 
   --fc-today-bg-color: var(--primary-one-fade);
 }
+
+
+.sidenav-bar {
+  transition: background-color 0.3s ease !important;
+}
