--- a/frontend/src/app/core/components/superadmin/main/main.component.html
+++ b/frontend/src/app/core/components/superadmin/main/main.component.html
@@ -1,6 +1,6 @@
 <!--Page Container-->
 
-<mat-sidenav-container class="sidenav-container">
+<mat-sidenav-container class="sidenav-container" autosize="true">
   <!--Side Nav Bar (Left Side)-->
   @if (showSidenav) {
 
