rename from PUP-HRIS to PUP-FESR

--- a/frontend/src/app/shared/dialog-faculty-login/dialog-faculty-login.component.html
+++ b/frontend/src/app/shared/dialog-faculty-login/dialog-faculty-login.component.html
@@ -8,8 +8,8 @@
   <div class="health-message-container">
     <span mat-symbol="wifi_tethering_off"></span>
     <p class="message-text">
-      HRIS is currently unavailable. Please use your FLSS backup credentials to
-      continue.
+      PUP-FESR is currently unavailable. Please use your FLSS backup credentials
+      to continue.
     </p>
   </div>
 
