--- a/frontend/src/app/shared/dialog-redirect/dialog-redirect.component.html
+++ b/frontend/src/app/shared/dialog-redirect/dialog-redirect.component.html
@@ -14,11 +14,11 @@
       <div class="text-inner-container" [@slideText]="currentTextState">
         <div class="text-panel">
           <span mat-symbol="wifi_tethering"></span>
-          Connecting to PUP-HRIS...
+          Connecting to PUP-FESR...
         </div>
         <div class="text-panel">
           <span mat-symbol="conversion_path"></span>
-          Redirecting you to PUP-HRIS...
+          Redirecting you to PUP-FESR...
         </div>
       </div>
     </div>
