update dialog-view-schedule component to clarify PDF availability message

--- a/frontend/src/app/shared/dialog-view-schedule/dialog-view-schedule.component.html
+++ b/frontend/src/app/shared/dialog-view-schedule/dialog-view-schedule.component.html
@@ -76,7 +76,7 @@
           </div>
         } @else {
           <div class="pdf-container">
-            <span>No PDF available.</span>
+            <span>No PDF available. Schedules are incomplete.</span>
           </div>
         }
       </div>
