fix bug causing that mat sidenav in admin/superadmin main components to not properly open/close during breakpoint changes

--- a/frontend/src/app/core/components/admin/main/main.component.scss
+++ b/frontend/src/app/core/components/admin/main/main.component.scss
@@ -12,10 +12,9 @@
   @include mixins.default-transition;
 }
 
-.sidenav-bar {
-  @include mixins.default-transition;
+.sidenav {
   width: 16rem;
-  background-color: var(--admin-bg);
+  background-color: transparent;
   padding: var(--spacing-sm) var(--spacing-md);
   user-select: none;
 
