--- a/frontend/src/app/core/components/superadmin/main/main.component.scss
+++ b/frontend/src/app/core/components/superadmin/main/main.component.scss
@@ -10,11 +10,10 @@
   @include mixins.default-transition;
 }
 
-.sidenav-bar {
+.sidenav {
   width: 16rem;
   background-color: var(--neutral-sidebar);
   padding: var(--spacing-sm) var(--spacing-md);
-  @include mixins.default-transition;
 
   .side-toolbar {
     @include mixins.flex-layout($direction: column, $gap: var(--spacing-md));
