--- a/frontend/src/app/auth/login/login.component.scss
+++ b/frontend/src/app/auth/login/login.component.scss
@@ -12,12 +12,14 @@
 .login-container {
   display: flex;
   height: 100%;
+  background-image: var(--background-image);
   background-size: cover;
   background-position: center;
   position: relative;
   padding: var(--spacing-lg);
   box-sizing: border-box;
   transition: background-image 1s ease-in-out;
+  will-change: background-image;
 
   &::before {
     content: "";
