apply background color if the sidenav is in push mode/mobile view

--- a/frontend/src/app/core/components/admin/admin-main/admin-main.component.html
+++ b/frontend/src/app/core/components/admin/admin-main/admin-main.component.html
@@ -5,6 +5,7 @@
   <mat-sidenav
     #drawer
     class="sidenav"
+    [class.sidenav-mobile]="isHandset$ | async"
     fixedInViewport
     [@slideInAnimation]
     [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
