--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.html
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.html
@@ -256,6 +256,7 @@
                 <div
                   (click)="openDayTimeDialog(element)"
                   class="day-time-button"
+                  [matTooltip]="getTooltipText(element)"
                 >
                   <span class="display-day-time">
                     {{ formatSelectedDaysAndTime(element) }}
