--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -19,6 +19,7 @@
   --neutral-space: #efefef;
   --neutral-extra: #f1f1f1;
   --neutral-extra-dark: #e4e4e4;
+  --neutral-border: #0000002f;
 
   /* Primary colors variations */
   --primary-one: #800000;
@@ -104,6 +105,7 @@
   --neutral-space: #171717;
   --neutral-extra: #252525;
   --neutral-extra-dark: #363636;
+  --neutral-border: #c7c5c55c;
 
   /* Primary colors variations */
   --primary-one: #a93232;
