implement schedule pdf export and download in faculty official schedule and schedule history

--- a/frontend/src/app/core/components/faculty/load-and-schedule/load-and-schedule.component.html
+++ b/frontend/src/app/core/components/faculty/load-and-schedule/load-and-schedule.component.html
@@ -60,6 +60,7 @@
     @if (isPublished) {
     <app-faculty-schedule-timetable
       [facultySchedule]="facultySchedule"
+      [showPreview]="true"
     ></app-faculty-schedule-timetable>
     } @else {
     <div class="unpublished-container">
