--- a/frontend/src/app/shared/dialog-schedule-history/dialog-schedule-history.component.html
+++ b/frontend/src/app/shared/dialog-schedule-history/dialog-schedule-history.component.html
@@ -59,6 +59,7 @@
     @if (facultySchedule) {
     <app-faculty-schedule-timetable
       [facultySchedule]="facultySchedule"
+      [showPreview]="false"
     ></app-faculty-schedule-timetable>
     }
   </div>
